# libmlwe-fast

./: .gitignore  CMakeLists.txt  generate_zetas.py  sample_input.txt
abstract/: abstract.tex
bench/: CMakeLists.txt  kem_bench.cpp  plot_benchmarks.py  run_benchmarks.py
cmake/: Catch2.cmake  Kyber-Ref.cmake
core/: CMakeLists.txt
core/include/lml/: cbd.h  fips202.h  kem.h  ntt.h  params.h  poly.h  randombytes.h  reduce.h
core/src/: cbd.c  fips202.c  indcpa.c  kem.c  ntt.c  poly.c  poly_gen.c  randombytes.c
crypto/: CMakeLists.txt
crypto/include/lml/: mlwe-fast.h
crypto/src/: mlwe-fast.c
docs/: instructions.tex  main.tex  references.bib
docs/chapters/: chosen_methods.tex  conclusion.tex  implementation.tex  introduction.tex  performance_evaluation.tex  theoretical_background.tex
examples/: demo.py
tests/: CMakeLists.txt  cbd.test.cpp  fips202.test.cpp  indcpa.test.cpp  kem.test.cpp  ntt.test.cpp  poly.test.cpp  polygen.test.cpp  polyvec.test.cpp  reduce.test.cpp  reference.test.cpp
